--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "element-ui": "^2.4.6",
+    "js-cookie": "^2.2.0",
     "normalize": "^0.3.1",
     "normalize.css": "^8.0.0",
     "vue": "^2.3.3",
